--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,5 +18,5 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 anyhow = "1.0"
-chrono = "0.4.42"
+chrono = { version = "0.4.42", features =["serde"] }
 rusqlite = { version = "0.37.0", features = ["bundled"] }
